[project]
name = "train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cython>=0.29.0,<1",
    "librosa>=0.9.2,<1",
    "numpy==1.26.4",
    "onnxruntime==1.21.0",
    "pytorch-lightning~=1.7.0",
    "torch>=2.7.1",
    "torchmetrics==0.11.4",
]
